<resources>
    <string name="app_name">首都护路联防</string>
    <string name="company_name">山东景鸿科技公司</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="mail_list">通讯录</string>
    <string name="oa">办公</string>
    <string name="create_hidden_danger">新增隐患</string>
    <string name="outbox">发件箱</string>
    <string name="inbox">收件箱</string>
    <string name="mail_send_to">发至 %s</string>

    <string name="create">新建</string>
    <string name="save">保存</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone_number">手机号</string>

    <string name="send">发送</string>

    <string name="account">账号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_data_txt">暂无数据</string>
    <string name="reload">重新加载</string>
    <string name="addressee">收件人</string>
    <string name="subject">主题</string>
    <string name="charger">负责人</string>
    <string name="gender">姓别</string>
    <string name="gender_female">女</string>
    <string name="gender_male">男</string>
    <string name="name">名称</string>

    <string name="birthday">出生日期</string>
    <string name="tel">电话</string>
    <string name="edu">文化程度</string>
    <string name="content">内容</string>
    <string name="ok">完成</string>
    <string name="loading_txt">加载中…</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="setting">设置</string>
    <string name="quit_login">退出登录</string>
    <string name="next">下一步</string>
    <string name="lat_lng">经纬度</string>
    <string name="remark">备注</string>
    <string name="station_name">车站名称</string>
    <string name="station_number">车站编号</string>
    <string name="telephone">联系电话</string>
    <string name="station_level">车站等级</string>
    <string name="address">地址</string>
    <string name="bridge_name">桥梁名称</string>
    <string name="bridge">桥梁</string>
    <string name="bridge_number">桥梁编号</string>
    <string name="tunnel">隧道</string>
    <string name="tunnel_number">隧道编号</string>
    <string name="culvert">涵洞</string>
    <string name="culvert_number">涵洞编号</string>
    <string name="reply">回复</string>
    <string name="forward">转发</string>
    <string name="ip_address">IP地址</string>
    <string name="monitor">监控探头</string>
    <string name="port">端口</string>
    <string name="org">所属机构</string>
    <string name="channel_number">通道号</string>
    <string name="id_number">身份证</string>
    <string name="age">年龄</string>
    <string name="hidden_danger_name">隐患点名称</string>
    <string name="hidden_danger_description">隐患点描述</string>
    <string name="hidden_danger_type">隐患类型</string>
    <string name="add_img_title">添加图片</string>
    <string name="bridge_classify">桥梁类别</string>
    <string name="duty">职务</string>
    <string name="description">描述</string>
    <string name="level_crossing">道口</string>
    <string name="level_crossing_name">道口名称</string>
    <string name="number">编号</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start_patrol">开始巡防</string>
    <string name="team_members">队伍成员</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="confirm">确定</string>
    <string name="select_org">选择组织</string>
    <string name="add_hidden_danger">新增隐患</string>
    <string name="daq">数据管理</string>
    <string name="culvert_name">涵洞名称</string>
    <string name="level_crossing_number">道口编号</string>
    <string name="patrol_team">巡防队伍</string>
    <string name="railway_bureau">隶属铁路局</string>
    <string name="historical_track">历史轨迹</string>
    <string name="patrol_mgt">巡防管理</string>
    <string name="filter">筛选</string>
    <string name="location">定位</string>
    <string name="mail_details">邮件详情</string>
    <string name="email">邮箱</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="video_chat">视频聊天</string>
    <string name="image">图片</string>
    <string name="file">文件</string>
    <string name="profile_info">个人信息</string>
    <string name="reset">重置</string>
    <string name="chat">聊天</string>
    <string name="my_notice">我的通知</string>
    <string name="my_conversation">我的会话</string>
    <string name="map">地图</string>
    <string name="group_info">群信息</string>
    <string name="online_users">在线队员</string>

    <string name="distance">%.2f 米</string>
    <string name="title_activity_settings">设置</string>
    <string name="locating">定位中…</string>
    <string name="new_mail">新建邮件</string>
    <string name="start_locate">开始定位</string>
    <string name="clear_chat_records">清空聊天记录</string>
    <string name="chat_info">聊天信息</string>
    <string name="group_chat_name">群聊名称</string>
    <string name="cancel">取消</string>
    <string name="emoji">Emoji</string>
    <string name="update_group_chat_name">修改群聊名称</string>
    <string name="clear_cache">清除缓存</string>
    <string name="common_settings">通用</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="about">关于</string>
    <string name="other">其他</string>
    <!-- 聊天通知信息-->
    <string name="chat_notify_msg">%1$s: %2$s</string>
    <string name="captcha">验证码</string>
    <string name="broadcast_mgt">警示柱管理</string>
    <string name="broadcast_list">警示柱列表</string>
    <string name="broadcast_map">警示柱地图</string>
    <string name="add_video_title">添加视频</string>
    <string name="real_scenery_along_the_line_title">沿线实景</string>
    <string name="phone_validation_code">手机验证码</string>
    <string name="img_validation_code">图片验证码</string>

    <string name="phone_validation_code_count_down_tip">还剩%d秒</string>

    <string name="poi_details_address">%1$s%2$s%3$s</string>
    <string name="tunnel_acquisition_txt">隧道采集</string>
    <string name="reply_mail">回复邮件</string>
    <string name="add_mail_img_pdf">点击添加图片/PDF</string>
    <string name="check_version_txt">检查版本</string>
    <string name="create_walkable_area_txt">易穿行区域采集</string>
    <string name="walkable_area_name_txt">易穿行区域名称</string>
    <string name="create_key_persion_title">重点人员采集</string>
    <string name="create_bridge_title">桥梁采集</string>
    <string name="create_broadcast_title">广播警示柱采集</string>
    <string name="broadcast_name_txt">广播警示柱名称</string>
    <string name="broadcast_number_txt">广播警示柱编号</string>
    <string name="create_culvert_title">涵洞采集</string>
    <string name="create_level_crossing_title">道口采集</string>
    <string name="create_peripheral_place_title">周边采集</string>
    <string name="create_police_station_title">派出所采集</string>
    <string name="create_propaganda_title">护路宣传点采集</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
